aahh fix things sticking out when unfolding. hopefully everything is good now

--- a/app/assets/volume/slot.styl
+++ b/app/assets/volume/slot.styl
@@ -5,6 +5,8 @@
   background-color white
   box-shadow box-shadow-def
   position relative
+  overflow hidden
+
   .slot-header.folder
     &:before
       top b4
